fix quarkus vs java11 issues and responseContentType bug